# mxchip-az3166

./: .clang-format  .clangformat  .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: devcontainer.json
az3166/common/: CMakeLists.txt  cmsis_utils.h  newlib_nano.c  screen.c  wwd_networking.h
az3166/mqtt-client/: CMakeLists.txt  main.c  main.h  nx_client.c  nx_client.h
az3166/startup/: CMakeLists.txt
cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake  variables.cmake
docs/: ST_README.md
lib/: CMakeLists.txt
lib/mxchip_bsp/ssd1306/: ssd1306_conf.h
lib/wiced_sdk/: CMakeLists.txt
lib/wiced_sdk/43xxx_Wi-Fi/: platform_isr.h
lib/wiced_sdk/binary_build/: rebuild.bat
samples/adu/: CMakeLists.txt  README.md  adu.code-workspace  azure_iot_adu.c  azure_iot_cert.h  azure_iot_connect.h  azure_iot_nx_client.c  azure_iot_nx_client.h  nx_azure_iot_adu_agent_proxy_simulator_driver.c  nx_azure_iot_adu_agent_stm32f4xx_driver.c
samples/adu/config/: azure_config.h
samples/azure_iot/: CMakeLists.txt  azure_config.h  main.c  nx_client.c  nx_client.h  sntp_client.c  wwd_networking.c
samples/azure_iot/config/: nx_user.h
samples/iot_hub/: CMakeLists.txt  README.md  azure_config.h  azure_device_x509_cert_config.h  azure_iot_cert.c  azure_iot_ciphersuites.c  azure_iot_ciphersuites.h  azure_iot_connect.c  azure_iot_nx_client.c  azure_iot_nx_client.h  iot_hub.code-workspace  main.c  nx_client.c  nx_client.h  wwd_networking.c  wwd_networking.h
samples/iot_hub/config/: azure_config.h  nx_user.h
samples/iot_hub/tools/: flash.sh
samples/mqtt-client/: CMakeLists.txt  main.c  main.h  nx_client.c  nx_client.h
samples/mqtt-client/config/: nx_user.h  tx_user.h
samples/mqtt_client/: CMakeLists.txt  README.md  main.c  mosquitto.cert.h  mqtt_client.code-workspace  mqtt_config.h  nx_client.c  sntp_client.c  wwd_networking.c  wwd_networking.h
samples/mqtt_client/tools/: flash.bat  flash.sh
tools/: get-toolchain.bat  get-toolchain.ps1
